--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,9 +4,10 @@
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 # Main 
-monitor = HDMI-A-3, 1366x768@60, 0x0, 1
+#monitor = HDMI-A-3, 1366x768@60, 0x0, 1
 # Secondary
-monitor = eDP-1, 1600x900@60, 1366x0, 1
+#monitor = eDP-1, 1600x900@60, 1366x0, 1
+monitor = ,preferred,auto,auto
 
 ###################
 ### MY PROGRAMS ###
@@ -27,13 +28,15 @@ $reload_waybar = pkill waybar; waybar &
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = doas keyd &
-exec-once = pipewire &
-exec-once = pipewire-pulse &
-exec-once = wireplumber &
-exec-once = waybar &
-exec-once = mako &
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
+exec-once = doas keyd 
+exec-once = pipewire 
+exec-once = pipewire-pulse 
+exec-once = wireplumber 
+exec-once = waybar 
+exec-once = mako 
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 
+exec-once = hyprpaper
+exec-once = hyprctl setcursor Banana 30
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -169,7 +172,7 @@ input {
     sensitivity = -0.2 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        scroll_factor = 0.7
+        scroll_factor = 1.0
         natural_scroll = true
         middle_button_emulation = true
         drag_lock = 1
