--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,15 +28,15 @@ $reload_waybar = pkill waybar; waybar &
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = doas keyd 
-exec-once = pipewire 
-exec-once = pipewire-pulse 
-exec-once = wireplumber 
-exec-once = waybar 
-exec-once = mako 
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 
-exec-once = hyprpaper
-exec-once = hyprctl setcursor Banana 30
+exec-once = doas keyd &
+exec-once = pipewire &
+exec-once = pipewire-pulse &
+exec-once = wireplumber &
+exec-once = waybar &
+exec-once = mako &
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
+exec-once = hyprpaper &
+exec-once = hyprctl setcursor Banana 30 &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
