--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,2 @@
-preload = /home/y/personal/walls/thorfin.png
-preload = /home/y/personal/walls/thorfinn2.jpg
-wallpaper = ,/home/y/personal/walls/thorfinn2.jpg
+preload = /home/y/personal/walls/thorfinn.png
+wallpaper = ,/home/y/personal/walls/thorfinn.png
