--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,10 +4,10 @@
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 # Main 
-#monitor = HDMI-A-3, 1366x768@60, 0x0, 1
+monitor = HDMI-A-3, 1366x768@60, 0x0, 1
 # Secondary
-#monitor = eDP-1, 1600x900@60, 1366x0, 1
-monitor = ,preferred,auto,auto
+monitor = eDP-1, 1600x900@60, 1366x0, 1
+#monitor = ,preferred,auto,auto
 
 ###################
 ### MY PROGRAMS ###
@@ -16,7 +16,7 @@ monitor = ,preferred,auto,auto
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty 
+$terminal = alacritty
 $fileManager = dolphin
 $menu = rofi -show drun
 $reload_waybar = pkill waybar; waybar &
@@ -28,12 +28,6 @@ $reload_waybar = pkill waybar; waybar &
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = doas keyd &
-exec-once = pipewire &
-exec-once = pipewire-pulse &
-exec-once = wireplumber &
-exec-once = waybar &
-exec-once = mako &
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 exec-once = hyprpaper &
 exec-once = hyprctl setcursor Banana 30 &
