feat: remove nvim and fix hyprl

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -17,7 +17,7 @@ monitor = eDP-1, 1600x900@60, 1366x0, 1
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = rofi -show drun
 $reload_waybar = pkill waybar; waybar &
 
@@ -28,6 +28,7 @@ $reload_waybar = pkill waybar; waybar &
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
+exec-once = waybar &
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 exec-once = hyprpaper &
 exec-once = hyprctl setcursor Banana 30 &
@@ -96,7 +97,7 @@ decoration {
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
-    enabled = no, please :)
+    enabled = yes, please :)
 
     # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
     #        NAME,           X0,   Y0,   X1,   Y1
