--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,10 +4,9 @@
 
 # See https://wiki.hypr.land/Configuring/Monitors/
 # Main 
-monitor = HDMI-A-3, 1366x768@60, 0x0, 1
+#monitor = HDMI-A-3, 1366x768@60, 0x0, 1
 # Secondary
 monitor = eDP-1, 1600x900@60, 1366x0, 1
-#monitor = ,preferred,auto,auto
 
 ###################
 ### MY PROGRAMS ###
@@ -17,7 +16,7 @@ monitor = eDP-1, 1600x900@60, 1366x0, 1
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = nautilus
+$fileManager = thunar
 $menu = rofi -show drun
 $reload_waybar = pkill waybar; waybar &
 
@@ -28,10 +27,10 @@ $reload_waybar = pkill waybar; waybar &
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = waybar &
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
-exec-once = hyprpaper &
-exec-once = hyprctl setcursor Banana 30 &
+exec-once = waybar
+exec-once = /usr/lib/hyprpolkitagent/hyprpolkitagent
+exec-once = hyprctl setcursor Banana 24
+exec-once = swww-daemon
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -41,7 +40,8 @@ exec-once = hyprctl setcursor Banana 30 &
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
 #####################
 ### LOOK AND FEEL ###
@@ -153,10 +153,7 @@ misc {
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
     kb_layout = us,ara
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
+    kb_options = grp:alt_shift_toggle
    
     # xset r rate 35 200
     repeat_rate = 35
@@ -272,19 +269,3 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# See https://wiki.hypr.land/Configuring/Window-Rules/ for more
-# See https://wiki.hypr.land/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
