--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -9,11 +9,10 @@
   "modules-center": ["clock"],
   "modules-right": [
     "pulseaudio",
+    "bluetooth",
     "battery",
-    "network",
     "cpu",
-    "memory",
-    "temperature",
+    "hyprland/language",
     "tray"
   ],
   // Modules configuration
@@ -28,30 +27,30 @@
     "icon-size": 21,
     "spacing": 10
   },
+  "hyprland/language": {
+    "format": "Lang: {}",
+    "format-en": "AMERICA",
+    "format-ar": "EGYPTAN"
+  },
+  "bluetooth": {
+	"format": " {status}",
+	"format-connected": " {device_alias}",
+	"format-connected-battery": " {device_alias} {device_battery_percentage}%",
+	// "format-device-preference": [ "device1", "device2" ], // preference list deciding the displayed device
+	"tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
+	"tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
+	"tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+	"tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%"
+  },
   "clock": {
     "timezone": "Africa/Cairo",
     "tooltip-format": "<big>j:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-    "format": "{:%d - %H:%M}"
-  },
-  "network": {
-    "format-wifi": "󰤢 ",
-    "format-disconnected": "󰤠 ",
-    "interval": 5,
-    "tooltip": false
+    "format": "{:%a %d - %H:%M}"
   },
   "cpu": {
     "interval": 1,
     "format": "  {icon0}{icon1}{icon2}{icon3} {usage:>2}%",
     "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
-  },
-  "memory": {
-    "interval": 30,
-    "format": "  {used:0.1f}G/{total:0.1f}G"
-  },
-  "temperature": {
-    "critical-threshold": 80,
-    "format": "{temperatureC}°C {icon}",
-    "format-icons": ["", "", ""]
   },
   "battery": {
     "states": {
@@ -76,7 +75,4 @@
     "on-click": "sh -c '(sleep 0.5s; hyprlock)' & disown",
     "format": ""
   },
-  "later": {
-    "format": "<span class='icon'>{icon}</span> <span class='text'>{text}</span>"
-  }
 }
