--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,12 +1,14 @@
+## Colors
+source = colors/colors.conf
 ################
 ### MONITORS ###
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-# Main 
-#monitor = HDMI-A-3, 1366x768@60, 0x0, 1
-# Secondary
-monitor = eDP-1, 1600x900@60, 1366x0, 1
+# Main (laptop screen)
+monitor = eDP-1, 1600x900@60, 0x0, 1
+# Secondary (external, above)
+monitor = HDMI-A-3, 1366x768@60, 0x-768, 1
 
 ###################
 ### MY PROGRAMS ###
@@ -57,11 +59,11 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $outline $primary 45deg
+    col.inactive_border = $secondary
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    resize_on_border = true
 
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -213,6 +215,8 @@ bind = $mainMod, h, movefocus, l   # left
 bind = $mainMod, j, movefocus, d   # down
 bind = $mainMod, k, movefocus, u   # up
 bind = $mainMod, l, movefocus, r   # right
+bindl = ,switch:Lid Switch,exec,hyprctl dispatch dpms off
+bindl = ,switch:Lid Switch,exec,hyprctl dispatch dpms on
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
