--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,5 +1,3 @@
-## Colors
-source = colors/colors.conf
 ################
 ### MONITORS ###
 ################
@@ -59,8 +57,8 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = $outline $primary 45deg
-    col.inactive_border = $secondary
+    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
