--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,9 +28,10 @@ $reload_waybar = pkill waybar; waybar &
 # Or execute your favorite apps at launch like this:
 
 exec-once = waybar
+exec-once = hyprpaper
 exec-once = /usr/lib/hyprpolkitagent/hyprpolkitagent
+exec-once = mako
 exec-once = hyprctl setcursor Banana 24
-exec-once = swww-daemon
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -97,7 +98,7 @@ decoration {
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = no, please :)
 
     # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
     #        NAME,           X0,   Y0,   X1,   Y1
@@ -109,23 +110,23 @@ animations {
 
     # Default animations, see https://wiki.hypr.land/Configuring/Animations/
     #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
-    animation = global,        1,     10,    default
-    animation = border,        1,     5.39,  easeOutQuint
-    animation = windows,       1,     4.79,  easeOutQuint
-    animation = windowsIn,     1,     4.1,   easeOutQuint, popin 87%
-    animation = windowsOut,    1,     1.49,  linear,       popin 87%
-    animation = fadeIn,        1,     1.73,  almostLinear
-    animation = fadeOut,       1,     1.46,  almostLinear
-    animation = fade,          1,     3.03,  quick
-    animation = layers,        1,     3.81,  easeOutQuint
+    animation = global,        1,     5,    default
+    animation = border,        1,     5,  easeOutQuint
+    animation = windows,       1,     4,  easeOutQuint
+    animation = windowsIn,     1,     4,   easeOutQuint, popin 87%
+    animation = windowsOut,    1,     1,  linear,       popin 87%
+    animation = fadeIn,        1,     1,  almostLinear
+    animation = fadeOut,       1,     1,  almostLinear
+    animation = fade,          1,     3,  quick
+    animation = layers,        1,     3,  easeOutQuint
     animation = layersIn,      1,     4,     easeOutQuint, fade
     animation = layersOut,     1,     1.5,   linear,       fade
-    animation = fadeLayersIn,  1,     1.79,  almostLinear
-    animation = fadeLayersOut, 1,     1.39,  almostLinear
-    animation = workspaces,    1,     1.94,  almostLinear, fade
-    animation = workspacesIn,  1,     1.21,  almostLinear, fade
-    animation = workspacesOut, 1,     1.94,  almostLinear, fade
-    animation = zoomFactor,    1,     7,     quick
+    animation = fadeLayersIn,  1,     1,  almostLinear
+    animation = fadeLayersOut, 1,     1,  almostLinear
+    animation = workspaces,    1,     1,  almostLinear, fade
+    animation = workspacesIn,  1,     1,  almostLinear, fade
+    animation = workspacesOut, 1,     1,  almostLinear, fade
+    animation = zoomFactor,    1,     3,     quick
 }
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
