--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -32,6 +32,8 @@ exec-once = hyprpaper
 exec-once = /usr/lib/hyprpolkitagent/hyprpolkitagent
 exec-once = mako
 exec-once = hyprctl setcursor Banana 24
+exec-once = hyprpaper
+exec-once = hyprsunset
 
 #############################
 ### ENVIRONMENT VARIABLES ###
